TypeExpr2ListTests